--- a/src/GeneralTheme.scss
+++ b/src/GeneralTheme.scss
@@ -1,3 +1,17 @@
-$first: #0C0C0F;
-$second: #131319;
-$third: #9446cb;
+// $first: #0C0C0F;
+// $second: #131319;
+// $third: #9446cb;
+
+$first: #0d2705;
+$second: #c7dfc8;
+// $second: #e7eef5;
+// $second: #E8DFCA;
+$third: #4caf50;
+$forth: #f0f5f5;
+$fifth: #ccc;
+// $forth: rgb(105, 17, 17);
+// $forth: #C6A969;
+
+// $third: #75e351;
+$font-color1: black;
+$font-color2: rgb(41, 41, 41);
