--- a/src/components/common/Footer/index.scss
+++ b/src/components/common/Footer/index.scss
@@ -17,7 +17,7 @@ html {
   }
   
   .footer {
-    background-color: $third;
+    background-color: $first;
     color: white;
     text-align: center;
     padding: 7px 0;
