--- a/src/components/common/PostsCard/index.scss
+++ b/src/components/common/PostsCard/index.scss
@@ -98,8 +98,8 @@
 }
 
 .posts-card .action-container .action-icon:hover {
-    color: $third;
-    background-color: #b7b7b7;
+    color: $first;
+    background-color: $second;
     border-radius: 30%;
 }
 
