--- a/src/components/common/UserMessages/index.scss
+++ b/src/components/common/UserMessages/index.scss
@@ -1,7 +1,7 @@
 .searched-user {
     display: flex;
     align-items: center;
-    border: 2px solid #ccc;
+    border: 2px solid $fifth;
     border-radius: 10px;
     padding: 15px;
     cursor: pointer;
