--- a/src/Scss/MessagesComponent.scss
+++ b/src/Scss/MessagesComponent.scss
@@ -3,7 +3,7 @@
 .messages-component-container {
   display: flex;
   flex-direction: column;
-  height: 37vw; 
+  height: 44vw; 
   padding: 0;
   @media (max-width: 768px) {
     padding: 10px; 
@@ -23,9 +23,10 @@
 .message-preview {
   margin-bottom: 20px;
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid $fifth;
   border-radius: 5px;
-  background-color: $first;
+  background-color: white;
+  color: $font-color1;
 
   .message-header {
     display: flex;
@@ -38,7 +39,7 @@
   }
 
   .message-timestamp {
-    color: #666;
+    color: $font-color2;
   }
 
   .message-text {
@@ -60,7 +61,9 @@
   input.Message-input {
     flex: 1;
     padding: 10px;
-    border: 1px solid #ccc;
+    color: $font-color1;
+    border: 1px solid $fifth;
+    background-color: white;
     border-radius: 5px;
     margin-right: 10px;
     font-size: 16px;
@@ -83,7 +86,7 @@
         font-size: 14px; 
       }
     &:disabled {
-      background-color: #ccc;
+      background-color: $fifth;
       cursor: not-allowed;
     }
   }
