--- a/src/components/common/LikeButton/index.scss
+++ b/src/components/common/LikeButton/index.scss
@@ -4,14 +4,14 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    color: $third;
+    color: $first;
     padding: 10px;
     cursor: pointer;
 
     .hr-line {
         margin-top: -20px;
         hr {
-            border: 1px solid orange;
+            border: 1px solid $third;
         }
     }
 
@@ -23,7 +23,7 @@
     }
 
     .purple {
-        color: $third;
+        color: $first;
     }
 
     .black {
@@ -50,7 +50,7 @@
         background-color: $second;
         border-radius: 30px;
         // padding-left: 20px;
-        color: whitesmoke;
+        color: $font-color1;
         font-size: 16px;
         margin-top: 10px;
         border: 3px solid transparent;
@@ -81,7 +81,7 @@
     .comment-preview {
         background-color: $second;
         border-radius: 10px;
-        color: #fff;
+        color: $font-color1;
         padding: 10px;
         margin-top: 10px;
         width: 100%;
@@ -104,7 +104,7 @@
         .comment-timestamp {
             margin-left: 5px;
             font-size: 12px;
-            color: #ccc;
+            color: $font-color2;
         }
 
         p {
