--- a/src/components/common/ProfileCard/index.scss
+++ b/src/components/common/ProfileCard/index.scss
@@ -60,7 +60,7 @@
         color: black;
         margin-top: 20px;
         padding-top: 5px;
-        border-top: 1px solid #ccc;
+        border-top: 1px solid $fifth;
     }
 
     .aboutme,
