--- a/src/components/common/ResumeBuilder/Body/index.module.scss
+++ b/src/components/common/ResumeBuilder/Body/index.module.scss
@@ -1,4 +1,7 @@
+@import "../../../../GeneralTheme.scss";
+
 .container {
+    background-color: $second;
     padding: 30px;
     display: flex;
     flex-direction: column;
@@ -13,6 +16,7 @@
 }
 
 .toolbar {
+    // background-color: white;
     width: 100%;
     display: flex;
     gap: 40px;
@@ -58,6 +62,8 @@
 }
 
 .main {
+    background-color: white;
+    color: black;
     display: flex;
     flex-direction: column;
     gap: 30px;
