--- a/src/components/common/SearchedUsers/index.scss
+++ b/src/components/common/SearchedUsers/index.scss
@@ -33,9 +33,7 @@
         margin-bottom: 10px;
     }
 
-    .connect-button,
-    .unfollow-button,
-    .message-button {
+    .connect-button {
         background-color: $third;
         color: #fff;
         border: none;
@@ -54,13 +52,33 @@
             padding: 6px 12px;
         }
     }
-    .unfollow-button {
-        background-color: lighten($second, 10%);
+    .unfollow-button,
+    .message-button {
+        background-color: $first;
+        color: #fff;
+        border: none;
+        border-radius: 50px;
+        padding: 8px 16px;
+        cursor: pointer;
+        font-weight: 600;
+        transition: background-color 0.3s ease;
+        // margin-right: 2%;
 
         &:hover {
-            background-color: darken($second, 15%);
+            background-color: darken($third, 15%);
+        }
+
+        @media screen and (max-width: 768px) {
+            padding: 6px 12px;
         }
     }
+    // .unfollow-button {
+    //     background-color: lighten($second, 10%);
+
+    //     &:hover {
+    //         background-color: darken($second, 15%);
+    //     }
+    // }
 
     @media (max-width: 768px) {
         grid-template-columns: 1fr;
