--- a/src/components/common/Post/index.scss
+++ b/src/components/common/Post/index.scss
@@ -10,7 +10,7 @@
         width: 100%;
         max-width: 500px;
         height: 120px;
-        background-color: #f0f5f5;
+        background-color: $forth;
         margin-top: 20px;
         border: 2px solid #dbe3e3;
         border-radius: 10px;
