--- a/src/components/common/ResumeBuilder/Resume/index.module.scss
+++ b/src/components/common/ResumeBuilder/Resume/index.module.scss
@@ -1,5 +1,9 @@
+@import "../../../../GeneralTheme.scss";
+
 .container {
     --color: #239ce2;
+    background-color: $forth;
+    color: black;
     min-width: 700px;
     max-width: 850px;
     margin: 0 auto;
