--- a/src/components/common/SearchedUsers/index.scss
+++ b/src/components/common/SearchedUsers/index.scss
@@ -1,7 +1,7 @@
 @import "../../../GeneralTheme.scss";
 
 .searched-user {
-    background-color: #f0f5f5;
+    background-color: $forth;
     border: 2px solid #333;
     border-radius: 10px;
     padding: 20px;
