--- a/src/Scss/ConnectionsComponent.scss
+++ b/src/Scss/ConnectionsComponent.scss
@@ -15,7 +15,7 @@
 }
 
 .connected-user {
-    background-color: #f0f5f5;
+    background-color: $forth;
     border: 2px solid #333;
     border-radius: 10px;
     padding: 20px;
