--- a/src/components/common/Button/index.scss
+++ b/src/components/common/Button/index.scss
@@ -1,3 +1,5 @@
+@import "../../../GeneralTheme.scss";
+
 .common-btn {
     width: 200px;
     height: 30px;
@@ -5,6 +7,7 @@
     background-color: whitesmoke;
     border: 2px solid #003365;
     color: #014488;
+    // color: $third;
     border-radius: 30px;
     font-family: system-ui;
     font-weight: 600;
