--- a/src/components/common/Modal/index.scss
+++ b/src/components/common/Modal/index.scss
@@ -1,3 +1,5 @@
+@import "../../../GeneralTheme.scss";
+
 .modal-input {
     width: 100%;
     // padding: 10px;
@@ -34,6 +36,7 @@
     position: absolute;
     bottom: 30px;
     color: rgb(14, 147, 205);
+    // color: $third;
     cursor: pointer;
 }
 
