--- a/src/components/common/PostsCard/index.scss
+++ b/src/components/common/PostsCard/index.scss
@@ -30,7 +30,7 @@
     width: 50vw;
     max-width: 600px;
     height: auto;
-    background-color: #f0f5f5;
+    background-color: $forth;
     margin-top: 20px;
     border: 2px solid #dbe3e3;
     border-radius: 10px;
