--- a/src/components/common/FollowersModal/index.scss
+++ b/src/components/common/FollowersModal/index.scss
@@ -8,17 +8,26 @@
     cursor: pointer;
 
     .name {
-        font-size: calc(14px + 0.2vw); 
-        color: #333; 
-        font-weight: bold; 
+        font-size: calc(14px + 0.2vw);
+        color: #333;
+        font-weight: bold;
     }
 
     img {
         width: 40px;
-        height: 40px; 
-        border-radius: 50%; 
-        object-fit: cover; 
+        height: 40px;
+        border-radius: 50%;
+        object-fit: cover;
         background-color: #333;
+    }
+
+    button {
+        border: none;
+        padding: 5px 10px;
+        border-radius: 5px;
+        background-color: $first;
+        color: white;
+        cursor: pointer;
     }
 }
 
