--- a/src/components/common/FollowingModal/index.scss
+++ b/src/components/common/FollowingModal/index.scss
@@ -20,6 +20,15 @@
         border-radius: 50%; 
         object-fit: cover; 
     }
+
+    button {
+        border: none;
+        padding: 5px 10px;
+        border-radius: 5px;
+        background-color: $first;
+        color: white;
+        cursor: pointer;
+    }
 }
 
 .following-inner:hover {
