--- a/src/components/common/Loader/index.scss
+++ b/src/components/common/Loader/index.scss
@@ -11,7 +11,7 @@
     left: 0;
 
     p {
-        font-family: 'Helvetica', sans-serif;
+        font-family: "Helvetica", sans-serif;
         font-weight: 500;
         font-size: 20px;
         color: whitesmoke;
