--- a/src/components/common/ProfileCard/index.scss
+++ b/src/components/common/ProfileCard/index.scss
@@ -52,7 +52,6 @@
                 font-size: 16px;
                 font-weight: bold;
             }
-            
         }
     }
 
@@ -119,61 +118,59 @@
         }
     }
 
-    .buttons{
-            .connect-button,
-            .unfollow-button,
-            .message-button ,
-            .followers-button,
-            .following-button
-            {
-                // background-color: #4caf50;
-                // background-color: rgb(255, 166, 0);
-                background-color: $third;
-                color: #fff;
-                border: none;
-                border-radius: 50px;
-                padding: 8px 16px;
-                cursor: pointer;
-                font-weight: 600;
-                transition: background-color 0.3s ease;
-                margin-right: 2%;
-                
-                &:hover {
-                    background-color: darken( $third, 15%);
-                }
+    .buttons {
+        .connect-button,
+        .unfollow-button,
+        .message-button,
+        .followers-button,
+        .following-button {
+            // background-color: #4caf50;
+            // background-color: rgb(255, 166, 0);
+            background-color: $third;
+            color: #fff;
+            border: none;
+            border-radius: 50px;
+            padding: 8px 16px;
+            cursor: pointer;
+            font-weight: 600;
+            transition: background-color 0.3s ease;
+            margin-right: 2%;
 
-                @media screen and (max-width: 768px) {
-                    padding: 6px 12px;
-                }
-                @media screen and (max-width: 462px) {
-                    margin-bottom: 3%;
-                }
+            &:hover {
+                background-color: darken($third, 15%);
             }
-            .unfollow-button {
-                background-color: lighten($second , 10%);
 
-                &:hover {
-                    background-color: darken($second , 15%);
-                }
+            @media screen and (max-width: 768px) {
+                padding: 6px 12px;
             }
-            .delete-account-button {
-                background-color: #f44336; 
-                color: #fff;
-                border: none;
-                border-radius: 50px;
-                padding: 8px 16px;
-                cursor: pointer;
-                font-weight: 600;
-                transition: background-color 0.3s ease;
-                margin-top: 10px; 
-                margin-bottom: 10px; 
-        
-                &:hover {
-                    background-color: #d32f2f;
-                }
+            @media screen and (max-width: 462px) {
+                margin-bottom: 3%;
             }
+        }
+        .unfollow-button {
+            background-color: lighten($second, 10%);
+
+            &:hover {
+                background-color: darken($second, 15%);
+            }
+        }
+        .delete-account-button {
+            background-color: #f44336;
+            color: #fff;
+            border: none;
+            border-radius: 50px;
+            padding: 8px 16px;
+            cursor: pointer;
+            font-weight: 600;
+            transition: background-color 0.3s ease;
+            margin-top: 10px;
+            margin-bottom: 10px;
+
+            &:hover {
+                background-color: #d32f2f;
+            }
+        }
     }
-   
 
     @media screen and (max-width: 768px) {
         .profile-info {
@@ -190,46 +187,3 @@
         }
     }
 }
-
-
-// .post-status-parent {
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     flex-direction: column;
-
-//     .post-status {
-//         width: 90%;
-//         max-width: 500px;
-//         height: 120px;
-//         background-color: #f0f5f5;
-//         margin-top: 20px;
-//         border: 2px solid #dbe3e3;
-//         border-radius: 10px;
-//         display: flex;
-//         justify-content: center;
-//         align-items: center;
-//         box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
-
-//         .create-post {
-//             width: 100%;
-//             height: 40px;
-//             text-align: center;
-//             font-family: Arial, sans-serif;
-//             color: #fff;
-//             font-size: 16px;
-//             background-color: $third;
-//             border: none;
-//             border-radius: 20px;
-//             cursor: pointer;
-//             padding: 0 20px;
-//             font-weight: bold;
-//             transition: background-color 0.3s ease;
-//             box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
-
-//             &:hover {
-//                 background-color: darken($color: $third, $amount: 15%);
-//             }
-//         }
-//     }
-// }
