--- a/src/GeneralTheme.scss
+++ b/src/GeneralTheme.scss
@@ -3,7 +3,10 @@
 // $third: #9446cb;
 
 $first: #0d2705;
-$second: #c7dfc8;
+// $first: yellow;
+// $second: #c7dfc8;
+$second: #d8ead8;
+// $second: #e2e6ea;
 // $second: #e7eef5;
 // $second: #E8DFCA;
 $third: #4caf50;
