--- a/src/components/common/ProfileEdit/index.scss
+++ b/src/components/common/ProfileEdit/index.scss
@@ -1,10 +1,12 @@
+@import "../../../GeneralTheme.scss";
+
 .profileEdit {
     display: flex;
     flex-direction: column;
     width: 90%;
     max-width: 600px;
     margin: 30px auto;
-    background-color: whitesmoke;
+    background-color: $forth;
     border-radius: 10px;
     position: relative;
     padding: 20px;
@@ -12,7 +14,7 @@
     .edit-btn {
         button {
             cursor: pointer;
-            background-color: #4caf50;
+            background-color: $third;
             color: #fff;
             border: none;
             border-radius: 5px;
@@ -43,68 +45,105 @@
 
         input,
         textArea {
-            width: 100%;
-            height: 50px;
+            margin-top: -1px;
+            width: 95%;
+            border: 1px solid #cccccc;
+            outline: none;
+            padding: 10px 12px;
+            font-size: 1rem;
             border-radius: 5px;
-            border: 1px solid gray;
-            margin: 5px 0;
-            padding: 0 10px;
-            box-sizing: border-box;
+        }
+        
+        input:hover {
+            border: 1px solid #adadad;
+        }
+        
+        input:focus {
+            border: 1px solid $third;
         }
 
-        textArea {
-            color: rgb(255, 252, 252);
-            font-family: system-ui;
-            font-size: 14px;
-            height: 100px;
-            resize: vertical;
-            padding: 10px;
-        }
+        // input,
+        // textArea {
+        //     width: 100%;
+        //     height: 50px;
+        //     border-radius: 5px;
+        //     border: 1px solid gray;
+        //     margin: 5px 0;
+        //     padding: 0 10px;
+        //     box-sizing: border-box;
+        // }
+
+        // textArea {
+        //     color: rgb(255, 252, 252);
+        //     font-family: system-ui;
+        //     font-size: 14px;
+        //     height: 100px;
+        //     resize: vertical;
+        //     padding: 10px;
+        // }
     }
 
     .save-btn {
-        display: inline-block;
-        padding: 0.5em 1em;
-        border-radius: 5em;
+        width: 30%;
+        // align-items: center;
+        background-color: $third;
         color: #fff;
-        font-size: 1em;
-        max-width: 20%;
-        letter-spacing: 0.15em;
-        transition: all 0.3s;
-        position: relative;
-        overflow: hidden;
-        z-index: 1;
-
-        &:after {
-            content: "";
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #0cf;
-            border-radius: 10em;
-            z-index: -2;
-        }
-
-        &:before {
-            content: "";
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 0%;
-            height: 100%;
-            background-color: darken(#0cf, 15%);
-            transition: all 0.3s;
-            border-radius: 10em;
-            z-index: -1;
-        }
+        border: none;
+        border-radius: 50px;
+        padding: 8px 16px;
+        cursor: pointer;
+        font-weight: 600;
+        transition: background-color 0.3s ease;
 
         &:hover {
-            color: #fff;
-            &:before {
-                width: 100%;
-            }
+            background-color: darken($third, 15%);
         }
+
+        @media screen and (max-width: 768px) {
+            padding: 6px 12px;
+        }
+        // display: inline-block;
+        // padding: 0.5em 1em;
+        // border-radius: 5em;
+        // color: #fff;
+        // font-size: 1em;
+        // max-width: 20%;
+        // letter-spacing: 0.15em;
+        // transition: all 0.3s;
+        // position: relative;
+        // overflow: hidden;
+        // z-index: 1;
+
+        // &:after {
+        //     content: "";
+        //     position: absolute;
+        //     bottom: 0;
+        //     left: 0;
+        //     width: 100%;
+        //     height: 100%;
+        //     background-color: #0cf;
+        //     border-radius: 10em;
+        //     z-index: -2;
+        // }
+
+        // &:before {
+        //     content: "";
+        //     position: absolute;
+        //     bottom: 0;
+        //     left: 0;
+        //     width: 0%;
+        //     height: 100%;
+        //     background-color: darken(#0cf, 15%);
+        //     transition: all 0.3s;
+        //     border-radius: 10em;
+        //     z-index: -1;
+        // }
+
+        // &:hover {
+        //     color: #fff;
+        //     &:before {
+        //         width: 100%;
+        //     }
+        // }
     }
 }
