--- a/src/components/common/Button/index.scss
+++ b/src/components/common/Button/index.scss
@@ -5,8 +5,8 @@
     height: 30px;
     cursor: pointer;
     background-color: whitesmoke;
-    border: 2px solid #003365;
-    color: #014488;
+    border: 2px solid $first;
+    color: $first;
     // color: $third;
     border-radius: 30px;
     font-family: system-ui;
@@ -17,6 +17,6 @@
 
 .common-btn:hover {
     background-color: rgb(230, 230, 230);
-    border: 2px solid #014488;
-    color: #014488;
+    border: 2px solid $first;
+    color: $first;
 }
