--- a/src/components/common/FollowingModal/index.scss
+++ b/src/components/common/FollowingModal/index.scss
@@ -18,6 +18,7 @@
         height: 40px;
         border-radius: 50%;
         object-fit: cover;
+        background-color: #333;
     }
 
     button {
