--- a/src/components/common/Navbar/index.scss
+++ b/src/components/common/Navbar/index.scss
@@ -122,7 +122,10 @@
     }
 
     img {
-        width: 40px;
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        object-fit: cover;
     }
 }
 
