--- a/src/components/common/ProfileCard/index.scss
+++ b/src/components/common/ProfileCard/index.scss
@@ -13,14 +13,19 @@
     .profile-info {
         display: flex;
         justify-content: space-between;
+        // justify-content: space-evenly;
         align-items: center;
         color: rgba(0, 0, 0, 0.9);
-        margin-bottom: 15px;
+        // margin-bottom: 15px;
+
+        .left-info {
+            width: 60%; /* Set width to 60% */
+        }
 
         .profile-image {
             background-color: #333;
             object-fit: contain;
-            margin-top: 10%;
+            // margin-top: 10%;
             width: 100px;
             height: 100px;
             object-fit: cover;
@@ -40,10 +45,11 @@
         }
 
         .right-info {
+            width: 40%;
             display: flex;
             flex-direction: column;
             align-items: flex-start;
-            margin-left: 10px;
+            // margin-left: 10px;
             margin-top: 20%;
 
             .company,
@@ -51,6 +57,24 @@
                 margin: 5px 0;
                 font-size: 16px;
                 font-weight: bold;
+            }
+            .edit-btn {
+                button {
+                    cursor: pointer;
+                    background-color: $third;
+                    color: #fff;
+                    border: none;
+                    border-radius: 5px;
+                    padding: 8px 16px;
+                    font-size: 14px;
+                    font-weight: bold;
+                    transition: background-color 0.3s ease;
+                    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+
+                    &:hover {
+                        background-color: #45a049;
+                    }
+                }
             }
         }
     }
@@ -99,28 +123,8 @@
         margin-top: 10px;
     }
 
-    .edit-btn {
-        button {
-            cursor: pointer;
-            background-color: #4caf50;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            padding: 8px 16px;
-            font-size: 14px;
-            font-weight: bold;
-            transition: background-color 0.3s ease;
-            box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
-
-            &:hover {
-                background-color: #45a049;
-            }
-        }
-    }
-
     .buttons {
         .connect-button,
-        .unfollow-button,
         .message-button,
         .followers-button,
         .following-button {
@@ -148,10 +152,25 @@
             }
         }
         .unfollow-button {
-            background-color: lighten($second, 10%);
+            border: $third 2px solid;
+            background-color: $forth;
+            color: $third;
+            border-radius: 50px;
+            padding: 6px 16px;
+            cursor: pointer;
+            font-weight: 600;
+            transition: background-color 0.3s ease;
+            margin-right: 2%;
 
             &:hover {
-                background-color: darken($second, 15%);
+                background-color: darken($forth, 15%);
+            }
+
+            @media screen and (max-width: 768px) {
+                padding: 6px 12px;
+            }
+            @media screen and (max-width: 462px) {
+                margin-bottom: 3%;
             }
         }
         .delete-account-button {
