--- a/src/components/common/ResumeBuilder/Body/index.module.scss
+++ b/src/components/common/ResumeBuilder/Body/index.module.scss
@@ -17,7 +17,8 @@
 
 .toolbar {
     // background-color: white;
-    width: 100%;
+    padding: 30px 0px 0px 0px;
+    // width: 100%;
     display: flex;
     gap: 40px;
     justify-content: space-between;
