--- a/src/components/common/ResumeBuilder/InputControl/index.module.scss
+++ b/src/components/common/ResumeBuilder/InputControl/index.module.scss
@@ -1,3 +1,5 @@
+@import "../../../../GeneralTheme.scss";
+
 .container {
     display: flex;
     flex-direction: column;
@@ -22,5 +24,5 @@ input:hover {
 }
 
 input:focus {
-    border: 1px solid #239ce2;
+    border: 1px solid $third;
 }
