--- a/src/Scss/MessagesComponent.scss
+++ b/src/Scss/MessagesComponent.scss
@@ -21,12 +21,14 @@
 }
 
 .message-preview {
+    width: 75%;
     margin-bottom: 20px;
     padding: 10px;
     border: 1px solid $fifth;
     border-radius: 5px;
     background-color: white;
     color: $font-color1;
+    margin-left: auto;
 
     .message-header {
         display: flex;
@@ -45,6 +47,11 @@
     .message-text {
         margin-top: 5px;
         word-wrap: break-word;
+    }
+
+    &.left {
+        margin-left: 0;
+        // margin-right: auto;
     }
 }
 
