design changes in follower, following, searchbar

--- a/src/Scss/ConnectionsComponent.scss
+++ b/src/Scss/ConnectionsComponent.scss
@@ -38,9 +38,9 @@
         }
     }
 
-    .user-details {
-        text-align: center;
-    }
+    // .user-details {
+    //     text-align: center;
+    // }
 
     .name {
         color: #333;
