--- a/src/components/common/FollowersModal/index.scss
+++ b/src/components/common/FollowersModal/index.scss
@@ -32,7 +32,7 @@
     .remove-btn {
         // justify-self: right; /* Remove this line */
         border: $third 2px solid;
-        background-color: $forth;
+        background-color: #ffffff;
         color: $third;
         border-radius: 50px;
         padding: 6px 16px;
