--- a/src/components/common/SearchedUsers/index.scss
+++ b/src/components/common/SearchedUsers/index.scss
@@ -53,6 +53,9 @@
             padding: 6px 12px;
         }
     }
+    .message-button{
+        width: 100px;
+    }
     
     .unfollow-button {
         border: $third 2px solid;
