--- a/src/components/common/FollowingModal/index.scss
+++ b/src/components/common/FollowingModal/index.scss
@@ -29,6 +29,29 @@
         color: white;
         cursor: pointer;
     }
+
+    .unfollow-btn {
+        // justify-self: right; /* Remove this line */
+        border: $third 2px solid;
+        background-color: #ffffff;
+        color: $third;
+        border-radius: 50px;
+        padding: 6px 16px;
+        cursor: pointer;
+        font-weight: 600;
+        transition: background-color 0.3s ease;
+        // margin-right: 2%; /* Remove this line */
+    
+        margin-left: auto; /* Add this line */
+    
+        &:hover {
+            background-color: darken($forth, 15%);
+        }
+    
+        @media screen and (max-width: 768px) {
+            padding: 6px 12px;
+        }
+    }
 }
 
 .following-inner:hover {
