--- a/src/components/common/Search/index.scss
+++ b/src/components/common/Search/index.scss
@@ -15,15 +15,17 @@
         width: 100%;
         height: 40px;
         background-color: whitesmoke;
-        border: 2px solid transparent;
+        border: 3px solid transparent;
         border-radius: 20px;
         color: #212121;
         padding: 0 15px;
         outline: none;
         transition: border-color 0.3s;
     }
-    input:focus {
-        border: $third 4px solid;
+
+    input:focus, 
+    input:hover{
+        border: $third 3px solid;
         // animation: blinkBorder 1s infinite alternate;
     }
     ::placeholder {
