--- a/src/Scss/MessagesComponent.scss
+++ b/src/Scss/MessagesComponent.scss
@@ -93,7 +93,7 @@
             font-size: 14px;
         }
         &:disabled {
-            background-color: #ffffff;
+            background-color: $fifth;
             cursor: not-allowed;
             padding: 8px 18px;
             border: $fifth 2px solid;
@@ -102,3 +102,39 @@
         }
     }
 }
+
+.Message-attachment {
+    cursor: pointer;
+    color: $font-color1;
+    margin-right: 10px;
+    font-size: 20px;
+    &:hover {
+        color: $first;
+    }
+}
+
+.message-file {
+    margin-top: 5px;
+    padding: 5px;
+    background-color: $forth; /* Background color for file display */
+    border-radius: 5px;
+}
+
+.message-file a {
+    color: $third; /* Link color for file */
+    text-decoration: none;
+}
+
+.message-file a:hover {
+    text-decoration: underline; /* Underline on hover for link */
+}
+
+// .file-preview-pdf {
+//     width: 100%;
+//     height: 500px; /* Adjust height as needed */
+// }
+
+// .file-preview-image {
+//     max-width: 100%;
+//     max-height: 300px; /* Adjust height as needed */
+// }
