--- a/src/GeneralTheme.scss
+++ b/src/GeneralTheme.scss
@@ -1,20 +1,23 @@
-// $first: #0C0C0F;
-// $second: #131319;
-// $third: #9446cb;
+// Old Theme
 
-$first: #0d2705;
-// $first: yellow;
-// $second: #c7dfc8;
-$second: #d8ead8;
-// $second: #e2e6ea;
-// $second: #e7eef5;
-// $second: #E8DFCA;
-$third: #4caf50;
+// $first: #0d2705;
+// $second: #d8ead8;
+// $third: #4caf50;
+// $forth: #f0f5f5;
+// $fifth: #ccc;
+
+
+// $font-color1: black;
+// $font-color2: rgb(41, 41, 41);
+
+// New Theme
+
+$first: #00004d;
+// $first: #00215E;
+$second: #e3edfa;
+$third: #1677ff;
 $forth: #f0f5f5;
 $fifth: #ccc;
-// $forth: rgb(105, 17, 17);
-// $forth: #C6A969;
 
-// $third: #75e351;
 $font-color1: black;
 $font-color2: rgb(41, 41, 41);
