--- a/src/components/common/Navbar/index.scss
+++ b/src/components/common/Navbar/index.scss
@@ -1,8 +1,8 @@
 @import "../../../GeneralTheme.scss";
 
 .navbar-master {
-    width: 98.5%;
-    height: 10vh;
+    width: 97.35%;
+    height: 4.3vw;
     background-color: $first;
     display: flex;
     align-items: center;
@@ -18,8 +18,9 @@
 
 .user-logo {
     width: 70%;
-    max-width: 60px;
     height: 70%;
+    max-width: 60px;
+    max-height: 60px;
     border-radius: 50%;
     object-fit: cover;
     cursor: pointer;
