--- a/src/Scss/MessagesComponent.scss
+++ b/src/Scss/MessagesComponent.scss
@@ -100,6 +100,9 @@
             // background-color: $forth;
             color: $forth;
         }
+        &:hover{
+            background-color: darken($third, 15%);
+        }
     }
 }
 
