--- a/src/components/common/Button/index.scss
+++ b/src/components/common/Button/index.scss
@@ -4,7 +4,7 @@
     width: 200px;
     height: 30px;
     cursor: pointer;
-    background-color: whitesmoke;
+    background-color: $forth;
     border: 2px solid $first;
     color: $first;
     // color: $third;
