--- a/src/components/common/ProfileCard/index.scss
+++ b/src/components/common/ProfileCard/index.scss
@@ -72,7 +72,7 @@
                     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
 
                     &:hover {
-                        background-color: #45a049;
+                        background-color: darken($third, 15%);
                     }
                 }
             }
@@ -186,7 +186,7 @@
             margin-bottom: 10px;
 
             &:hover {
-                background-color: #d32f2f;
+                background-color: darken(#f44336, 15%);
             }
         }
     }
