--- a/src/components/common/PostsCard/index.scss
+++ b/src/components/common/PostsCard/index.scss
@@ -31,7 +31,7 @@
     max-width: 600px;
     height: auto;
     background-color: $forth;
-    margin-top: 20px;
+    margin-top: 8px;
     border: 2px solid #dbe3e3;
     border-radius: 10px;
     padding: 20px;
@@ -47,9 +47,14 @@
 .posts-card .status {
     font-family: Arial, sans-serif;
     color: rgba(0, 0, 0, 0.6);
-    font-weight: 400;
-    margin-top: 5px;
+    font-weight: 500;
+    margin-top: 2px;
     margin-left: auto;
+    margin-bottom: 5px;
+}
+
+.posts-card .timeStamp  {
+    font-size: small;
 }
 
 .posts-card .name {
@@ -62,7 +67,7 @@
 
 .posts-card .status {
     text-align: left;
-    margin: 10px 0 0 10px;
+    margin: 7px 0 0 7px;
     font-family: Arial, sans-serif;
     font-size: 18px;
     font-weight: 450;
@@ -71,8 +76,8 @@
 
 .posts-card .post-image {
     width: 100%;
-    margin-top: 10px;
-    border-radius: 5px;
+    margin-top: 0px;
+    border-radius: 0px;
     object-fit: cover;
     cursor: pointer;
 }
