--- a/src/components/common/FollowersModal/index.scss
+++ b/src/components/common/FollowersModal/index.scss
@@ -1,5 +1,12 @@
 @import "../../../GeneralTheme.scss";
 
+.followers-results, .following-results { 
+    max-height: 400px; 
+    overflow-y: auto; 
+    overflow-x:auto;
+}
+
+
 .followers-inner {
     display: flex;
     gap: 20px;
@@ -39,9 +46,9 @@
         cursor: pointer;
         font-weight: 600;
         transition: background-color 0.3s ease;
-        // margin-right: 2%; /* Remove this line */
+        margin-right: 5%; 
     
-        margin-left: auto; /* Add this line */
+        margin-left: auto;
     
         &:hover {
             background-color: darken($forth, 15%);
@@ -52,26 +59,6 @@
         }
     }
     
-    // .remove-btn {
-    //     // justify-self: right;
-    //     border: $third 2px solid;
-    //     background-color: $forth;
-    //     color: $third;
-    //     border-radius: 50px;
-    //     padding: 6px 16px;
-    //     cursor: pointer;
-    //     font-weight: 600;
-    //     transition: background-color 0.3s ease;
-    //     // margin-right: 2%;
-
-    //     &:hover {
-    //         background-color: darken($forth, 15%);
-    //     }
-
-    //     @media screen and (max-width: 768px) {
-    //         padding: 6px 12px;
-    //     }
-    // }
 }
 
 .followers-inner:hover {
