--- a/src/Scss/LoginComponent.scss
+++ b/src/Scss/LoginComponent.scss
@@ -18,6 +18,7 @@ body {
     box-sizing: border-box;
     background-color: $first;
     text-align: center; 
+    border-radius: 5px;
     .login-wrapper-inner {
         display: flex;
         flex-direction: column;
