--- a/src/Scss/MessengersComponent.scss
+++ b/src/Scss/MessengersComponent.scss
@@ -1,17 +1,16 @@
 .MessengersComponent {
-    height: 42vw; /* Occupy full height of the viewport */
-    overflow-y: auto; /* Enable vertical scrolling */
+    height: 38vw; 
+    overflow-y: auto; 
     padding: 20px;
-    // background-color: #f8f9fa;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    max-width: 300px; /* Adjust width as needed */
-    margin-right: 20px; /* Add some space between MessengersComponent and MessagesComponent */
+    max-width: 300px;
+    margin-right: 20px; 
     display: flex;
     flex-direction: column;
     gap: 10px;
-    align-items: stretch; /* Users take full available width */
+    align-items: stretch;
 
     .messaging-user {
         display: flex;
