--- a/src/Scss/SearchResultsComponent.scss
+++ b/src/Scss/SearchResultsComponent.scss
@@ -1,7 +1,38 @@
+@import "../GeneralTheme.scss";
 .searched-results {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
     padding: 2%;
-    width: 97.1%;
+    width: 96%;
+}
+.pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    padding: 0;
+    margin-top: 20px; /* Adjust margin-top as needed */
+}
+
+.page-item {
+    margin: 0 5px;
+}
+
+.page-link {
+    padding: 8px 16px;
+    border: 1px solid $first;
+    background-color: $forth;
+    color: #333;
+    cursor: pointer;
+
+    &:hover {
+        transition: background-color 0.3s ease;
+        background-color: #cacaca;
+    }
+
+    &.active {
+        background-color: $first;
+        color: #fff;
+    }
 }
