--- a/src/Scss/SearchResultsComponent.scss
+++ b/src/Scss/SearchResultsComponent.scss
@@ -1,18 +1,34 @@
 @import "../GeneralTheme.scss";
+
 .searched-results {
+    display: flex;
+    flex-direction: column; // Change to flex column to manage children linearly
+    align-items: center; // Center children horizontally
+    padding: 2%;
+    width: 96%;
+    margin: auto;
+}
+
+.search-results-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
-    padding: 2%;
-    width: 96%;
+    width: 100%; // Ensure it takes the full width of its container
 }
+
+.pagination-container {
+    display: flex;
+    justify-content: center; // Center horizontally
+    width: 100%; // Take full width to maintain centering context
+    margin-top: 20px; // Space from the last grid item
+}
+
 .pagination {
     display: flex;
     justify-content: center;
-    align-items: center;
     list-style: none;
     padding: 0;
-    margin-top: 20px; /* Adjust margin-top as needed */
+    margin-top: 20px;
 }
 
 .page-item {
@@ -27,8 +43,8 @@
     cursor: pointer;
 
     &:hover {
-        transition: background-color 0.3s ease;
         background-color: #cacaca;
+        transition: background-color 0.3s ease;
     }
 
     &.active {
