--- a/src/Scss/ConnectionsComponent.scss
+++ b/src/Scss/ConnectionsComponent.scss
@@ -25,6 +25,16 @@
     gap: 20px;
     cursor: pointer;
 
+    .name {
+        color: #333;
+        font-weight: bold;
+        margin-bottom: 5px;
+        white-space: nowrap; /* Prevent text from wrapping */
+        overflow: hidden; /* Hide overflowing text */
+        text-overflow: ellipsis;
+        max-width: 100px;
+    }
+
     img {
         width: 100px;
         height: 100px;
@@ -38,9 +48,11 @@
         }
     }
 
-    // .user-details {
-    //     text-align: center;
-    // }
+    .user-details {
+        text-align: left;
+        max-width: 100px;
+    }
+    
 
     .name {
         color: #333;
